added open settings for denied permission
also changed how to get first element in list
and fixed profile activity opening multiple times on scan